feat: thoughts section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,35 @@
                     </p>
                 </div>
             </div>
+            <div class="container">
+                <section class="thoughts">
+                    <h2 class="section-header">My thoughts</h2>
+                    <div class="thouts-content-wrapper">
+                        <img
+                            class="thoughts-img"
+                            src="./assets/img/cat-portret.webp"
+                            alt="cat in hat"
+                        />
+                        <p class="thoughts-text">
+                            “Noen dager lurer jeg på hva som egentlig er
+                            viktigst – å fange bugs eller mus. Hva er bedre – å
+                            fange bugs eller mus? Begge kan være irriterende,
+                            men bare én gir ekte snacks, tenker jeg mens jeg
+                            stirrer på skjermen. Jeg hopper fra linje til linje
+                            med kode, og noen ganger fra tastatur til stol, mens
+                            jeg prøver å finne løsninger på problemer som virker
+                            større enn meg. Koding er som jakt – tålmodighet,
+                            nysgjerrighet og en god dose humor er alltid
+                            nødvendig. Når jeg lykkes med et vanskelig prosjekt,
+                            spinner jeg fornøyd, men når ting krasjer, ser jeg
+                            det som en mulighet til å lære noe nytt. Livet som
+                            KodeKatt handler om å balansere mellom kaos og
+                            orden, mellom kode og kos, og alltid finne gleden i
+                            små seire.”
+                        </p>
+                    </div>
+                </section>
+            </div>
         </main>
     </body>
 </html>
