feat: section story

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="container">
                 <section class="thoughts">
-                    <h2 class="section-header">My thoughts</h2>
+                    <h2 class="section-header">Mine tanker</h2>
                     <div class="thouts-content-wrapper">
                         <img
                             class="thoughts-img"
@@ -71,6 +71,53 @@
                             små seire.”
                         </p>
                     </div>
+                </section>
+                <section class="story">
+                    <h2 class="section-header">Bare én historie</h2>
+                    <svg class="story-svg">
+                        <use href="./assets/sprite.svg#cat-bold"></use>
+                    </svg>
+                    <p class="story-text">
+                        I går hadde jeg en av de dagene hvor alt virker mulig –
+                        og samtidig helt umulig. Jeg satt ved skrivebordet mitt
+                        med kaffekoppen på høyre side og musematten på venstre,
+                        og planla å skrive et nytt script som skulle gjøre livet
+                        mitt enklere. Alt startet greit, men så, midt i en
+                        funksjon, hørte jeg en liten lyd fra hjørnet av rommet.
+                        En ekte mus! Jeg frøs. «Hva gjør jeg først – fanger jeg
+                        musen eller fikser jeg bugen?» spurte jeg meg selv.
+                        <br /><br />
+                        Som katt er jeg naturlig nysgjerrig, men som
+                        programmerer kan jeg ikke ignorere en krasjende
+                        funksjon. Jeg forsøkte å kode mens jeg med ett øye holdt
+                        øye med musen som hopet rundt. Linjene med kode begynte
+                        å se ut som et kaotisk spindelvev. På et tidspunkt falt
+                        musematten ned, kaffekoppen nesten også, og jeg endte
+                        med å lande på tastaturet med halen svingende som en
+                        liten flaggermus. «Koding og jakt i samme rom er
+                        egentlig ikke anbefalt,» tenkte jeg, mens jeg prøvde å
+                        få tilbake kontrollen. <br /><br />
+                        Musen var rask, men jeg hadde et hemmelig våpen: min
+                        katteintuisjon. Med et plutselig hopp klarte jeg å
+                        skremme den ut av rommet, og samtidig – nesten magisk –
+                        løste jeg bugen som hadde plaget meg i flere timer. Jeg
+                        spant fornøyd, og tastaturet luktet litt kaffe, men alt
+                        var under kontroll. Jeg tenkte på hvordan livet mitt
+                        alltid balanserer mellom kaos og orden, mellom kode og
+                        kos, mellom å jakte på bugs og ekte mus. Noen ganger
+                        virker det som om verden prøver å teste både mine klør
+                        og mine ferdigheter som utvikler. Til slutt satte jeg
+                        meg tilbake, ørene på spiss, halen krøllet rundt benet
+                        mitt, og smilte for meg selv. <br /><br />
+                        Dagen hadde vært full av små katastrofer, men også små
+                        seire. Jeg lærte at tålmodighet og humor er like viktige
+                        i koding som i jakt. Og kanskje viktigst av alt – at en
+                        katt som meg alltid finner glede i små triumfer, enten
+                        det er å fikse en bug eller å få en mus til å hoppe ut
+                        døren. Jeg tok en siste slurk kaffe og mumlet: Sånn er
+                        livet som KodeKatt – alltid en kombinasjon av kaos, kode
+                        og kos.
+                    </p>
                 </section>
             </div>
         </main>
