--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <header>
             <div class="container">
-                <nav>
+                <nav id="nav">
                     <ul class="nav-list">
                         <li class="nav-item nav-item-selected">
                             <a href="#">Home</a>
@@ -121,5 +121,30 @@
                 </section>
             </div>
         </main>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-content-wrapper">
+                    <ul class="footer-links-list">
+                        <li class="footer-list-item">
+                            <a
+                                href="https://gokstadakademiet.no/"
+                                rel="noopener noreferrer"
+                                target="_blank"
+                                >Gokstad Akademiet</a
+                            >
+                        </li>
+                        <li class="footer-list-item">
+                            <a
+                                href="https://github.com/dmkomur/arbeidskrav-1"
+                                rel="noopener noreferrer"
+                                target="_blank"
+                                >Repository</a
+                            >
+                        </li>
+                    </ul>
+                    <a href="#nav" class="footer-button-up">Up</a>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
