feat: about page

--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
     <body>
         <header>
             <div class="container">
-                <nav id="nav">
-                    <ul class="nav-list">
+                <ul class="nav-list" id="nav">
                         <li class="nav-item nav-item-selected">
-                            <a href="#">Home</a>
+                            <a href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#">About</a>
+                            <a href="./about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#">Hobby</a>
+                            <a href="./hobby.html">Hobby</a>
                         </li>
                     </ul>
                 </nav>
@@ -51,7 +50,7 @@
                         <img
                             class="thoughts-img"
                             src="./assets/img/cat-portret.webp"
-                            alt="cat in hat"
+                            alt="cat med lue"
                         />
                         <p class="thoughts-text">
                             “Noen dager lurer jeg på hva som egentlig er
