feat: hobby page

--- a/hobby.html
+++ b/hobby.html
@@ -30,7 +30,102 @@
                 </nav>
             </div>
         </header>
-        <main></main>
+        <main>
+            <div class="gallery">
+                <div class="container">
+                    <h2 class="section-header">Diskotek</h2>
+                    <div class="gallery-wrapper">
+                        <img
+                            src="./assets/img/dance1.webp"
+                            alt="katt danser"
+                            class="gallery-img"
+                        />
+                        <img
+                            src="./assets/img/dance2.webp"
+                            alt="katt danser"
+                            class="gallery-img"
+                        />
+                        <img
+                            src="./assets/img/dance3.webp"
+                            alt="katt danser"
+                            class="gallery-img"
+                        />
+                    </div>
+                </div>
+            </div>
+            <section class="hobby">
+                <div class="container">
+                    <div class="hobby-wrapper">
+                        <h2 class="section-header">Dette er hobbyen min</h2>
+                        <p class="hobby-text">
+                            Alle tror at jeg bare lever for kode og kaffe, men
+                            sannheten er at jeg har et annet, litt glitrende
+                            hjerte: disco. Hvordan begynte det? Vel, en kveld
+                            satt jeg foran skjermen og kjempet med en sta bug,
+                            da jeg hørte musikk utenfra. Jeg kikket ut vinduet,
+                            og der, midt på plenen, danset en vakker katt til
+                            rytmen av gamle 70-talls hits. Hun snurret, hoppet
+                            og logret med halen i takt. Jeg var hypnotisert.
+                            <br />
+                            <br />
+                            Jeg glemte bugen fullstendig og begynte å trampe med
+                            potene mine på tastaturet. Kodingen ble til rytmer,
+                            og rytmene ble til dans. Fra det øyeblikket visste
+                            jeg at jeg trengte mer enn bare mørke netter foran
+                            skjermen – jeg trengte glitter, lys og et sted å
+                            slippe løs halen.
+                            <br />
+                            <br />
+                            Så jeg satte opp mitt eget diskotek hjemme. Jeg fant
+                            en gammel diskokule på loftet til naboen (den luktet
+                            svakt av sild, men skinte fortsatt vakkert), og
+                            koblet til et par blinkende lys. Jeg bygde et
+                            lydsystem ved hjelp av mine egne kodeferdigheter,
+                            som spiller alt fra ABBA til Daft Punk når jeg bare
+                            mjauer “play”. Resultatet? En liten klubb midt i
+                            stua mi, åpen hver natt.
+                            <br />
+                            <br />
+                            Det morsomste er å kombinere koding med dansing.
+                            Noen ganger skriver jeg kode i takt med musikken: én
+                            pote på tastaturet, den andre i lufta, halen som en
+                            metronom. Jeg har lært at debugging går mye raskere
+                            når jeg tar en danserunde mellom hver test. Faktisk
+                            oppdaget jeg min mest elegante algoritme mens jeg
+                            gjorde «moonwalk» over tastaturet.
+                            <br />
+                            <br />
+                            Selvfølgelig er naboene litt skeptiske. De sier at
+                            det er vanskelig å sove når en katt kjører lasershow
+                            klokka tre om natta. Men jeg sier: «Disco sover
+                            aldri.» Dessuten har flere katter fra nabolaget
+                            begynt å stikke innom. Først bare for å se, men nå
+                            deltar de. Vi har faste kvelder hvor vi danser
+                            sammen, og jeg lærer dem å kode enkle beats. Det er
+                            et fellesskap av pels, rytme og ren glede.
+                            <br />
+                            <br />
+                            Jeg tror disco gir meg noe koding aldri kan: ren
+                            spontanitet. Når jeg koder, må jeg være strukturert,
+                            logisk og tålmodig. Men når jeg danser, er alt lov.
+                            Ingen syntax-feil, bare frihet. Og likevel oppdager
+                            jeg at de to hobbyene mine utfyller hverandre
+                            perfekt. Koding skjerper hodet, disco holder kroppen
+                            og sjelen i bevegelse.
+                            <br />
+                            <br />
+                            Så hvis du en dag ser et vindu som glitrer av
+                            farger, og hører «Stayin’ Alive» på full styrke, så
+                            vet du hvor du skal banke på. Jeg lover å by deg opp
+                            til dans, uansett om du har to bein eller fire. For
+                            meg er livet enkelt: Kode på dagen, disco på natta.
+                            Og i begge tilfeller gjelder det samme mottoet:
+                            aldri slutt å bevege deg.
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </main>
         <footer class="footer">
             <div class="container">
                 <div class="footer-content-wrapper">
