--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="./styles/styles.css" />
+        <link rel="icon" href="./assets/favicon.svg" type="image/x-icon" />
         <title>KodeKatt hobby</title>
     </head>
     <body>
