--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="./styles/styles.css" />
+        <link rel="icon" href="./assets/favicon.svg" type="image/x-icon" />
         <title>KodeKatt</title>
     </head>
     <body>
         <header>
             <div class="container">
-                <ul class="nav-list" id="nav">
+                <nav id="nav">
+                    <ul class="nav-list">
                         <li class="nav-item nav-item-selected">
                             <a href="./index.html">Home</a>
                         </li>
